set(project dht11_c)
cmake_minimum_required(VERSION 3.12)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(${project} LANGUAGES C CXX ASM)
pico_sdk_init()
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

add_library(${project} src/dht.c)
target_include_directories(${project} PUBLIC include)
target_link_libraries(${project} pico_stdlib)

if (DEFINED DHT_SDA)
	add_compile_definitions(DHT_SDA=${DHT_SDA})
endif()
add_executable("${project}_demo" demo.c)
target_link_libraries("${project}_demo" ${project})

pico_add_extra_outputs("${project}_demo")
pico_enable_stdio_usb("${project}_demo" 1)
pico_enable_stdio_uart("${project}_demo" 0)
